--- a/src/styles/base/base.css
+++ b/src/styles/base/base.css
@@ -1,5 +1,3 @@
-@import 'tailwindcss';
-
 @layer base {
   *,
   *::before,
@@ -8,7 +6,7 @@
   }
 
   body {
-    @apply m-0 p-0;
+    @apply m-0 p-0 bg-black;
     font-family: 'Inter', sans-serif;
   }
 }
