--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -6,5 +6,6 @@
 @import './components/footer.css';
 @import './components/card.css';
 @import './components/list.css';
+@import './components/form.css';
 @import './components/popup.css';
 
