--- a/src/styles/components/header.css
+++ b/src/styles/components/header.css
@@ -1,6 +1,6 @@
 @layer components {
   .header {
-  @apply min-h-[120px] font-sans flex items-center shrink-0 relative;
+  @apply min-h-30 font-sans flex justify-between items-center shrink-0 relative;
 }
 
 .header::before {
@@ -13,7 +13,7 @@
 
 @media screen and (max-width: 480px) {
   .header {
-    @apply min-h-[85px];
+    @apply min-h-21.25;
   }
   .header::before {
     width: calc(100% + 40px);
